--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,19 +2,20 @@ version: "3"
 
 services:
   mysql:
-        image: mysql:8.0.28
-        volumes: 
-            - /var/lib/mysql
-        ports: 
-            - 3306:3306
-        environment: 
-            MYSQL_ROOT_PASSWORD: university
-            MYSQL_DATABASE: university
-            MYSQL_USER: university
-            MYSQL_PASSWORD: university
-        restart: always
-        container_name: Mysql
-        tty: true
+    build: .
+    volumes:
+      - /var/lib/mysql
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: university
+      MYSQL_DATABASE: university
+      MYSQL_USER: university
+      MYSQL_PASSWORD: university
+      TZ: "Asia/Tokyo"
+    restart: always
+    container_name: Mysql
+    tty: true
 
   backEnd:
     image: openjdk:17
@@ -23,13 +24,14 @@ services:
     working_dir: /app
     volumes:
       - ../BackEnd:/app # Spring Bootのプロジェクト
-    ports: 
+    ports:
       - 8080:8080 # 通常実行
       - 5050:5050 # デバッグ用
     depends_on:
       - mysql # 「mysql」の後で起動
 
   app:
+
     build: ../FrontEnd
     ports:
       - "3000:3000"
@@ -39,6 +41,6 @@ services:
       - node_modules_volume:/src/node_modules
     tty: true
     environment:
-    - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_USEPOLLING=true
 volumes:
   node_modules_volume:
